# swarm-core

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  INSTALL-Windows.txt  INSTALL.md  Makefile.am  README.md  bootstrap.dockerfile  build.dockerfile  common.mk  configure.ac  entrypoint.sh  make-mks  run.docker  supervisor.conf
Builds/VisualStudio2015/: stellar-core.sln  stellar-core.vcxproj  stellar-core.vcxproj.filters
Builds/VisualStudio2015/libmedida/: libmedida.vcxproj
Builds/VisualStudio2015/libsoci/: libsoci.vcxproj
Builds/VisualStudio2015/libsoci_postgresql/: libsoci_postgresql.vcxproj
Builds/VisualStudio2015/libsoci_sqlite3/: libsoci_sqlite3.vcxproj
Builds/VisualStudio2015/libsqlite/: libsqlite.vcxproj
bootstrap/: bootstrap.sh  init.yml  run.yml
docs/: changes.md  decentralized_exchange.md  integration.md  ledger.md  stellar-core.1  transaction.md
docs/troubleshooting/: README.md
lib/: CMakeLists.txt  Makefile.am  catch.hpp  catcher.cpp  stellar-core.cfg
lib/gtest/googlemock/msvc/2015/: gmock.vcxproj
lib/soci/src/core/: exchange-traits.h
src/: CMakeLists.txt  Makefile.am  StellarCoreVersion.h  gen_xdr.cmake  platform_definitions.cmake  platform_include.cmake  platform_libs.cmake
src/bucket/: Bucket.cpp  Bucket.h  BucketApplicator.cpp  BucketApplicator.h  BucketList.h  BucketTests.cpp  LedgerCmp.h
src/crypto/: CryptoTests.cpp  HdKeychain.cpp  HdKeychain.h  HdKeychainTests.cpp  SecretKey.cpp  SecretKey.h  StrKey.h
src/database/: Database.cpp  Database.h  DatabaseTests.cpp  Marshaler.cpp  Marshaler.h
src/exsysidgen/: BTCIDGenerator.cpp  BTCIDGenerator.h  ETHIDGenerator.cpp  ETHIDGenerator.h  ExternalSystemIDGenerators.cpp  ExternalSystemIDGenerators.h  Generator.cpp  Generator.h  Secp256k1IDGenerator.cpp  Secp256k1IDGenerator.h
src/herder/: Herder.h  HerderImpl.cpp  HerderImpl.h  HerderTests.cpp  LedgerCloseData.cpp  PendingEnvelopes.cpp  TxSetFrame.cpp  Upgrades.cpp  Upgrades.h
src/history/: HistoryManagerImpl.cpp  HistoryTests.cpp  HistoryWork.cpp  InferredQuorum.cpp  InferredQuorumTests.cpp
src/invariant/: CacheIsConsistentWithDatabase.cpp  CacheIsConsistentWithDatabase.h  Invariant.cpp  Invariant.h  InvariantDoesNotHold.cpp  InvariantDoesNotHold.h  Invariants.cpp  Invariants.h
src/ledger/: AccountFrame.cpp  AccountFrame.h  AccountHelper.cpp  AccountHelper.h  AccountKYCFrame.cpp  AccountKYCFrame.h  AccountKYCHelper.cpp  AccountKYCHelper.h  AccountLimitsFrame.cpp  AccountLimitsFrame.h  AccountLimitsHelper.cpp  AccountLimitsHelper.h  AccountRoleFrame.cpp  AccountRoleFrame.h  AccountRoleHelper.cpp  AccountRoleHelper.h  AccountRolePermissionFrame.cpp  AccountRolePermissionFrame.h  AccountRolePermissionHelper.cpp  AccountRolePermissionHelper.h  AccountRolePermissionHelperImpl.cpp  AccountRolePermissionHelperImpl.h  AccountRolePolicyFrame.cpp  AccountRolePolicyFrame.h  AccountRolePolicyHelper.cpp  AccountRolePolicyHelper.h  AccountTypeLimitsFrame.cpp  AccountTypeLimitsFrame.h  AccountTypeLimitsHelper.cpp  AccountTypeLimitsHelper.h  AssetFrame.cpp  AssetFrame.h  AssetHelper.cpp  AssetHelper.h  AssetHelperImpl.cpp  AssetHelperImpl.h  AssetHelperLegacy.cpp  AssetHelperLegacy.h  AssetPairFrame.cpp  AssetPairFrame.h  (+141 more)
src/main/: Application.h  ApplicationImpl.cpp  ApplicationImpl.h  CommandHandler.cpp  CommandHandler.h  Config.cpp  Config.h  ExternalQueue.cpp  PersistentState.cpp  PersistentState.h  dumpxdr.cpp  fuzz.cpp  main.cpp  test.cpp  test.h
src/overlay/: FloodTests.cpp  ItemFetcher.cpp  ItemFetcherTests.cpp  OverlayManagerImpl.cpp  OverlayManagerTests.cpp  OverlayTests.cpp  Peer.cpp  PeerAuth.cpp  PeerRecordTests.cpp  StellarXDR.h  TCPPeer.cpp  TCPPeerTests.cpp
src/process/: ProcessTests.cpp
src/scp/: BallotProtocol.cpp  LocalNode.cpp  NominationProtocol.cpp  SCP.cpp  SCPDriver.h  SCPTests.cpp  SCPUnitTests.cpp  Slot.cpp
src/simulation/: CoreTests.cpp  LoadGenerator.cpp  LoadGenerator.h  Simulation.cpp  Simulation.h
src/test/: test_marshaler.h
src/transactions/: AccountManager.cpp  AccountManager.h  AccountManagerTests.cpp  AddContractDetailsOpFrame.cpp  AddContractDetailsOpFrame.h  BindExternalSystemAccountIdOpFrame.cpp  BindExternalSystemAccountIdOpFrame.h  CancelAssetRequestOpFrame.cpp  CancelAssetRequestOpFrame.h  CheckSaleStateOpFrame.cpp  CheckSaleStateOpFrame.h  ComisssionHandler.cpp  ComisssionHandler.h  CounterpartyDetails.h  CreateAMLAlertRequestOpFrame.cpp  CreateAMLAlertRequestOpFrame.h  CreateAccountOpFrame.cpp  CreateAccountOpFrame.h  CreateAccountTests.cpp  CreateAssetOpFrame.cpp  CreateAssetOpFrame.h  CreateKYCReviewableRequestOpFrame.cpp  CreateKYCReviewableRequestOpFrame.h  CreateManageLimitsRequestOpFrame.cpp  CreateManageLimitsRequestOpFrame.h  CreateSaleCreationRequestOpFrame.cpp  CreateSaleCreationRequestOpFrame.h  CreateWithdrawalRequestOpFrame.cpp  CreateWithdrawalRequestOpFrame.h  DirectDebitOpFrame.cpp  DirectDebitOpFrame.h  DirectDebitTests.cpp  FeesManager.cpp  FeesManager.h  FlexibleFeesTests.cpp  IdentityPolicyChecker.cpp  IdentityPolicyChecker.h  ManageAccountOpFrame.cpp  ManageAccountOpFrame.h  ManageAccountRoleOpFrame.cpp  (+105 more)
src/transactions/dex/: CreateOfferOpFrame.cpp  CreateOfferOpFrame.h  CreateSaleParticipationOpFrame.cpp  CreateSaleParticipationOpFrame.h  DeleteOfferOpFrame.cpp  DeleteOfferOpFrame.h  DeleteSaleParticipationOpFrame.cpp  DeleteSaleParticipationOpFrame.h  ManageOfferOpFrame.cpp  ManageOfferOpFrame.h  ManageSaleHelper.cpp  ManageSaleHelper.h  ManageSaleOpFrame.cpp  ManageSaleOpFrame.h  ManageSaleParticipationOpFrame.cpp  ManageSaleParticipationOpFrame.h  OfferExchange.cpp  OfferExchange.h  OfferManager.cpp  OfferManager.h  UpdateOfferOpFrame.cpp  UpdateOfferOpFrame.h
src/transactions/issuance/: CreateIssuanceRequestOpFrame.cpp  CreateIssuanceRequestOpFrame.h  CreatePreIssuanceRequestOpFrame.cpp  CreatePreIssuanceRequestOpFrame.h
src/util/: BitsetEnumeratorTests.cpp  Logging.cpp  Logging.h  StatusManager.h  StatusManagerTest.cpp  Timer.cpp  Timer.h  TimerTests.cpp  Uint128Tests.cpp  ValidJsonTests.cpp  optional.h  types.cpp  types.h
src/work/: WorkTests.cpp
(+262 files in other folders)
